--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
+    "@sanity/client": "^6.15.5",
+    "@sanity/image-url": "^1.0.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
